--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 # baseurl: "/Type-on-Strap"
-url: "https://yimingfan.github.io"
+url: "https://fyiming.github.io/yimingfan.github.io/"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Type on Strap                                    # site's title
