--- a/_data/social.yml
+++ b/_data/social.yml
@@ -8,7 +8,7 @@ share:
   email: true
   facebook: true
   linkedin: true
-  pinterest: true
+  pinterest: 
   pocket:
   reddit: true
   tumblr: true
