--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,7 +4,7 @@
   url: https://example.com
   hide: true
   position: 2
-- type-on-strap:
-  title: "Type on Strap"
-  url: https://github.com/sylhare/Type-on-Strap
-  position: 1
+# - type-on-strap:
+#   title: "Type on Strap"
+#   url: https://github.com/sylhare/Type-on-Strap
+#   position: 1
